Gizmo rotation inverted (in some perspective angles) #85340

Closed
opened 2021-02-03 15:49:06 +01:00 by Hjalti Hjálmarsson · 6 comments

System Information
Operating system: Linux-5.4.0-7642-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: Radeon Vega Frontier Edition (VEGA10, DRM 3.35.0, 5.4.0-7642-generic, LLVM 10.0.0) X.Org 4.6 (Core Profile) Mesa 20.0.8

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-01 09:00, hash: 9c244820d1

Short description of error
In certain perspective angles the rotation of the Gizmo gets inverted.

Exact steps for others to reproduce the error
New blend file
Select the default cube
Turn on the Gizmo for rotation
Rotate your perspective view so it's closer to the horizon
Rotate the Z-axis of the cube with the Gizmo
...you may have to try a few angles before you notice it getting inverted.

I will include a simple blend file with a Suzanne head and a perspective that already has an angle that makes the Gizmo's Z-axis rotation be inverted.
widget_rotation_inverted.blend

**System Information** Operating system: Linux-5.4.0-7642-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: Radeon Vega Frontier Edition (VEGA10, DRM 3.35.0, 5.4.0-7642-generic, LLVM 10.0.0) X.Org 4.6 (Core Profile) Mesa 20.0.8 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-01 09:00, hash: `9c244820d1` **Short description of error** In certain perspective angles the rotation of the Gizmo gets inverted. **Exact steps for others to reproduce the error** New blend file Select the default cube Turn on the Gizmo for rotation Rotate your perspective view so it's closer to the horizon Rotate the Z-axis of the cube with the Gizmo ...you may have to try a few angles before you notice it getting inverted. I will include a simple blend file with a Suzanne head and a perspective that already has an angle that makes the Gizmo's Z-axis rotation be inverted. [widget_rotation_inverted.blend](https://archive.blender.org/developer/F9610659/widget_rotation_inverted.blend)
Author
Member

Added subscriber: @Hjalti

Added subscriber: @Hjalti
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can reproduce this issue on 2.93.0 Alpha, branch: master, commit date: 2021-02-03 08:53, hash: 4884153823. Even though the view is clearly "above" the rotation plane, a clockwise rotation of the mouse will result in a counter-clockwise rotation of the object. EDIT: This also happens using the shortcut {key R}+{key Z}.

I can reproduce this issue on 2.93.0 Alpha, branch: master, commit date: 2021-02-03 08:53, hash: `4884153823`. Even though the view is clearly "above" the rotation plane, a clockwise rotation of the mouse will result in a counter-clockwise rotation of the object. EDIT: This also happens using the shortcut {key R}+{key Z}.
Germano Cavalcante self-assigned this 2021-02-03 18:27:35 +01:00

This issue was referenced by bbd74e9fd4

This issue was referenced by bbd74e9fd4ce014cc98c76eae03563dd0c0d1727

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85340
No description provided.